# ssf2fcitx

./: .gitignore  CMakeLists.txt  LICENSE  README.md  convert.cpp  main.cpp  run_test.sh  ssfextract.cpp
